# zkFaceID

./: .gitignore  Cargo.toml  README.md  enrollment.json
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: enroll.rs  verify.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
