[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enroll"
path = "src/enroll.rs"

[[bin]]
name = "verify"
path = "src/verify.rs"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
zkface-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bincode = "1.3"
